# federated_mmm

./: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  report.py  run.py
aggregator/: __init__.py  convergence.py  fed_avg_posterior.py  federated_loop.py  flower_strategy.py  hierarchical.py  round_manager.py  simulate.py
causal_validation/: __init__.py  audit.py  geo_loader.py  geo_matcher.py  synthetic_control.py
config/: __init__.py  experiment_logger.py  global.yaml  participant_1.yaml  participant_10.yaml  participant_2.yaml  participant_3.yaml  participant_4.yaml  participant_5.yaml  participant_6.yaml  participant_7.yaml  participant_8.yaml  participant_9.yaml
data/: __init__.py
fedarated_mmm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
llm_prior/: __init__.py  elicitor.py  prompt_builder.py  refiner.py  surprise.py  validator.py
participants/: __init__.py  flower_client.py  local_trainer.py
privacy/: __init__.py  dp_sharing.py
results/: round_1.json  round_10.json  round_2.json  round_3.json  round_4.json  round_5.json  round_6.json  round_7.json  round_8.json  round_9.json
tests/: run_smoke_tests.py  smoke_test_aggregator_1_fed_avg.py  smoke_test_aggregator_2_hierarchical.py  smoke_test_aggregator_3_round_manager.py  smoke_test_aggregator_4_fedarated_loop_1.py  smoke_test_aggregator_4_fedarated_loop_2.py  smoke_test_control_1_geo_loader.py  smoke_test_control_2_fit_synthetic.py  smoke_test_control_3_estimae_increment.py  smoke_test_control_4_geo_matcher.py  smoke_test_control_5_full_audit.py  (+20 more)
(+21 files in other folders)
